# explora

./: README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
algorithms/: grow_shrink.py  grow_shrink_algorithm.py  shrink.py
datasets/: tic_tac_toe.csv
examples/: exact_search_MB_discovery.py  mb_discovery.py  stochastic_mb_discovery.py
explora/algorithms/: greedy_markov_blanket_discovery.py  grow_shrink.py  random_markov_blanket_discovery.py  shrink.py  stochastic_markov_blanket_discovery.py  stochastic_random_markov_blanket_discovery.py
explora/information_theory/: estimators.py  information_theory_basic.py  mixed_estimator.py  permutation_model.py
explora/optimization/: exact_search.py  greedy_search.py  refinement_and_evaluation.py
explora/sequences/: context_tree.py
explora/some_statistics/: basic_statistics.py
explora/utilities/: tools.py
information_theory/: estimators.py  information_theory_basic.py
markov_blankets/algorithms/: grow_shrink_algorithm.py  shrink.py
markov_blankets/information_theory/: estimators.py  information_theory_basic.py  mixed_estimator.py  permutation_model.py
markov_blankets/optimization/: bounding_functions.py  greedy_search.py  refinement_and_evaluation.py
markov_blankets/sequences/: estimators
markov_blankets/some_statistics/: basic_statistics.py
markov_blankets/utilities/: tools.py
optimization/: greedy_search.py
sequences/: context_tree.py  estimators
some_statistics/: basic_statistics.py
tests/utilities/: tools.py
utilities/: tools.py
(+6 files in other folders)
