[tool.poetry]
name = "markov_blankets"
version = "0.1.0"
description = ""
authors = ["Panagiotis Mandros <mandros.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1,<3.9"
numba = "^0.52.0"
numpy = "^1.20.1"
pandas = "^1.2.3"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
